--- a/css/osw.css
+++ b/css/osw.css
@@ -29,6 +29,15 @@ body {
     font-weight: 700;
 }
 
+@media (max-width: 767px) {
+    .header h1 {
+        font-size: 2em;
+    }
+    .header h3 {
+        font-size: 1.5em;
+    }
+}
+
 /* Custom Button Styles */
 
 .btn-dark {
